# srs_public

./: README  README_CU  mainpage.dox  manifest.xml  readme.txt  rosdep.yaml  stack.xml
ROB/: mainpage.dox
srs_assisted_arm_navigation/: CMakeLists.txt  mainpage.dox  manifest.xml
srs_assisted_arm_navigation/action/: ManualArmManip.action  ManualBBEstimation.action  ManualGrasping.action
srs_assisted_arm_navigation/config/: arm_links.yaml  arm_manip_but.vcg  arm_manip_collider.vcg  arm_manip_octs.vcg  cob3-3_planning_description.yaml  environment_server_robot.yaml  ompl_planning.yaml  self_filter.yaml
srs_assisted_arm_navigation/include/: but_arm_manipulation_node.h
srs_assisted_arm_navigation/launch/: arm_manip_node.launch  arm_nav_common.launch  arm_nav_common.xml  but_arm_nav_rob.launch  but_arm_nav_sim.launch  but_arm_nav_with_dm.launch  cob_common.launch  cob_common.xml  cob_planning_environment.launch  cob_planning_environment.xml  collider_arm_nav_sim.launch  constraint_aware_kinematics.launch  constraint_aware_kinematics.xml  grasping_node.launch  kinect_throttling.launch  octs_arm_nav_sim.launch  ompl_planning.launch  ompl_planning.xml  planning_env.launch  planning_env_but.launch  planning_env_but.xml  planning_env_octs.launch  planning_scene_warehouse_viewer_cob3_3_robot.launch  planning_scene_warehouse_viewer_cob3_3_robot.xml  rviz.launch  self_filter.launch
srs_assisted_arm_navigation/lib/: but_arm_navigation.yaml  but_cob_gui.yaml
srs_assisted_arm_navigation/src/: arm_manip_state_machine.py  but_arm_manip_action.cpp  but_arm_manip_collobj_methods.cpp  but_arm_manip_services.cpp  but_arm_manipulation_node.cpp
srs_assisted_arm_navigation/srv/: ArmNavMovePalmLinkRel.srv  ArmNavSetAttached.srv  ArmNavStart.srv  ArmNavStep.srv  ArmNavSwitchAttCO.srv  GraspingAllow.srv
srs_assisted_grasping/: CMakeLists.txt  mainpage.dox  manifest.xml
srs_assisted_grasping/config/: sdh_config.yaml  tactile_filter.yaml
srs_assisted_grasping/launch/: assisted_grasping_test_sim.launch  grasping_node.launch  tactile_filter_gui.launch  tactile_filter_node.launch  velocity_interface_sim.launch
srs_assisted_grasping/src/: fake_velocity_interface.py  grasping-as-test.py  manual_grasping_node.cpp  reactive_grasping_node.cpp  tactile_filter.cpp
srs_env_model/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml
srs_env_model/billboards/: chair.material  chair.mesh.xml  milk.material  milk.mesh.xml  person.material  person.mesh.xml  table.material  table.mesh.xml
srs_env_model/config/: cpc_test1.vcg  environment_server_defaults.yaml  environment_server_robot.yaml  envmodel_common.vcg  majkl1.vcg  majkl2.vcg  test1.vcg
srs_env_model/launch/: but_dynmodel_compressed_pointcloud_test.launch  but_dynmodel_compressor.launch  but_dynmodel_decompressor.launch  but_dynmodel_majkl1.launch  but_dynmodel_majkl1_nosim.launch  but_dynmodel_majkl2.launch  but_dynmodel_test1.launch  but_dynmodel_test1_nosim.launch  but_envmodel_client.launch  but_envmodel_common.launch  but_envmodel_diff_pcl_test.launch  but_envmodel_diff_pointcloud_test.launch  but_envmodel_robot.launch  but_envmodel_test_with_bag.launch  but_envmodel_test_with_robot.launch  but_envmodel_test_with_sim.launch  but_gui.launch  but_gui_example.launch  cob_fake_detector_test.launch  compression_test.launch  fake_map_frame.launch  kinect_throttling.launch  majkl1.vcg  only_butserver.launch  rviz_kitchen.launch  test1.vcg
srs_env_model/meshes/: chair.dae  milk.dae  person.dae  person_head.dae  plane.mesh.xml  table.dae  unknown_object.material  unknown_object.mesh.xml
srs_env_model/msg/: BillboardType.msg  Context.msg  ContextChanged.msg  MenuClicked.msg  PoseChanged.msg  PrimitiveType.msg  ScaleChanged.msg
srs_env_model/srv/: AddBillboard.srv  AddObject.srv  AddObjectWithBoundingBox.srv  AddPlanes.srv  ChangeColor.srv  ChangeDirection.srv  ChangeVelocity.srv  GetContext.srv  Plane.srv  RemoveCube.srv  RemoveObject.srv  RemovePrimitive.srv  SetContext.srv  SetGraspingPosition.srv
srs_env_model_percp/: CMakeLists.txt  mainpage.dox  manifest.xml  rosdep.yaml
srs_env_model_percp/config/: bb_estimator.vcg  bb_estimator_params.yaml  planedet_params.yaml  planedet_params_kinect.yaml  planedet_params_ransac_kinect.yaml  planedet_params_robot.yaml  planedet_params_robot_ransac.yaml  planedet_rviz.vcg  planedet_rviz_bag.vcg  planedet_rviz_kinect.vcg
srs_env_model_percp/launch/: bb_estimator_cob_image_flip.launch  bb_estimator_common.launch  bb_estimator_test.launch  bb_estimator_test_flipped.launch  but_planedet_common.launch  but_planedet_kinect.launch  but_planedet_ransac_common.launch  but_planedet_ransac_kinect.launch  but_planedet_ransac_test_with_bag.launch  but_planedet_ransac_test_with_sim.launch  but_planedet_robot.launch  but_planedet_robot_ransac.launch  but_planedet_test_with_bag.launch  but_planedet_test_with_sim.launch  but_sim.launch  planedet_demo.launch  planedet_demo_with_sim_ipa.launch  planedet_demo_with_sim_wg.launch
srs_env_model_percp/srv/: ClearPlanes.srv  EstimateBB.srv  ResetPlanes.srv
srs_env_model_percp/utils/: play_bag.sh
srs_env_model_ui/: CMakeLists.txt  mainpage.dox  manifest.xml
srs_env_model_ui/lib/: but_env_model_gui.yaml
srs_env_model_ui/src/: init.cpp
srs_env_model_utils/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml  self_filter.launch
srs_env_model_utils/launch/: cloud_throttling.launch  image_flip.launch  kinect_noise_generator.launch  kinect_throttling.launch
srs_env_model_utils/src/: cloud_throttle.cpp  kinect_noise_generator.cpp  kinect_throttle.cpp  self_filter.cpp  test_filter.cpp
srs_env_model_utils/utils/: cam3d_record_bag.sh  stereo_record_bag.sh
srs_interaction_primitives/: CMakeLists.txt  mainpage.dox  manifest.xml
srs_interaction_primitives/action/: ClickablePositions.action
srs_interaction_primitives/config/: action_server.vcg  interaction_primitives.vcg
srs_interaction_primitives/launch/: clickable_positions_test.launch  (+3 more)
srs_ui_but/: CMakeLists.txt  mainpage.dox  manifest.xml
srs_user_tests/: CMakeLists.txt  manifest.xml
(+1847 files in other folders)
